# Simple-WeChat

wechat3/: CMakeLists.txt  WechatServiceClient.h  WechatServiceImpl.h  client.cpp  main.cpp  public.h  server.cpp
wechat3/base/: create.sql  mysql.cpp  redis.cpp
wechat3/proto/: wechat.grpc.pb.cc  wechat.grpc.pb.h  wechat.pb.cc  wechat.pb.h  wechat.proto
wechat3/tool/: cjson.cpp  cjson.h  hash.h  json.cpp  uthash.h
